--- a/reference/ins_api/paths/reports-v2-reports-GET.yaml
+++ b/reference/ins_api/paths/reports-v2-reports-GET.yaml
@@ -28,6 +28,12 @@ responses:
           type: array
           items:
             $ref: '#/components/schemas/ReportModel'
+  '400':
+    description: Bad Request
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
   '401':
     description: Niepoprawna autentykacja tokenu
     content:
