--- a/reference/ins_api/paths/actual-user-params-v2-params-GET.yaml
+++ b/reference/ins_api/paths/actual-user-params-v2-params-GET.yaml
@@ -31,7 +31,11 @@ responses:
     content:
       application/json:
         schema:
-          $ref: '#/components/schemas/Error'
+          example:
+            error: {}
+            details: {}
+          items:
+            $ref: '#/components/schemas/Error'
   '401':
     description: Niepoprawna autentykacja tokenu
     content:
