--- a/reference/ins_api/paths/notifications-v2-notifications-GET.yaml
+++ b/reference/ins_api/paths/notifications-v2-notifications-GET.yaml
@@ -33,7 +33,11 @@ responses:
     content:
       application/json:
         schema:
-          $ref: '#/components/schemas/Error'
+          example:
+            error: {}
+            details: {}
+          items:
+            $ref: '#/components/schemas/Error'
   '401':
     description: Niepoprawna autentykacja tokenu
     content:
