--- a/reference/krs_rdf/paths/financial-data-GET.yaml
+++ b/reference/krs_rdf/paths/financial-data-GET.yaml
@@ -293,21 +293,20 @@ responses:
                 type: string
                 pattern: \d+\.\d{2}
                 example: '10362941097.49'
-                description: Wartość sprzedanych towarów i materiałów" - wariant porównawczy
-                  poz. B (VIII) - kwota na dzień kończący bieżący rok obrotowy
+                description: Wartość sprzedanych towarów i materiałów" - kwota na
+                  dzień kończący bieżący rok obrotowy
               pala_copgams_vogams_pfy:
                 type: string
                 pattern: \d+\.\d{2}
                 example: '10362941097.49'
-                description: Wartość sprzedanych towarów i materiałów" - wariant porównawczy
-                  poz. B (VIII) - kwota na dzień kończący poprzedni rok obrotowy
+                description: Wartość sprzedanych towarów i materiałów" - kwota na
+                  dzień kończący poprzedni rok obrotowy
               pala_copgams_vogams_cpfy:
                 type: string
                 pattern: \d+\.\d{2}
                 example: '10362941097.49'
-                description: Wartość sprzedanych towarów i materiałów" - wariant porównawczy
-                  poz. B (VIII) - przekształcone dane porównawcze za poprzedni rok
-                  obrotowy
+                description: Wartość sprzedanych towarów i materiałów" - przekształcone
+                  dane porównawcze za poprzedni rok obrotowy
               pala_gplfs_cpfy:
                 pattern: \d+\.\d{2}
                 type: string
@@ -708,40 +707,38 @@ responses:
                 type: string
                 pattern: \d+\.\d{2}
                 example: '10362941097.49'
-                description: Wartość sprzedanych towarów i materiałów" - wariant porównawczy
-                  poz. B (VIII) - kwota na dzień kończący bieżący rok obrotowy
+                description: Wartość sprzedanych towarów i materiałów" - kwota na
+                  dzień kończący bieżący rok obrotowy
               pala_oac_oc_vogams_pfy:
                 type: string
                 pattern: \d+\.\d{2}
                 example: '10362941097.49'
-                description: Wartość sprzedanych towarów i materiałów" - wariant porównawczy
-                  poz. B (VIII) - kwota na dzień kończący poprzedni rok obrotowy
+                description: Wartość sprzedanych towarów i materiałów" - kwota na
+                  dzień kończący poprzedni rok obrotowy
               pala_oac_oc_vogams_cpfy:
                 type: string
                 pattern: \d+\.\d{2}
                 example: '10362941097.49'
-                description: Wartość sprzedanych towarów i materiałów" - wariant porównawczy
-                  poz. B (VIII) - przekształcone dane porównawcze za poprzedni rok
-                  obrotowy
+                description: Wartość sprzedanych towarów i materiałów" - przekształcone
+                  dane porównawcze za poprzedni rok obrotowy
               pala_oac_vogams_cfy:
                 type: string
                 pattern: \d+\.\d{2}
                 example: '10362941097.49'
-                description: Wartość sprzedanych towarów i materiałów" - wariant porównawczy
-                  poz. B (VIII) - kwota na dzień kończący bieżący rok obrotowy
+                description: Wartość sprzedanych towarów i materiałów" - kwota na
+                  dzień kończący bieżący rok obrotowy
               pala_oac_vogams_pfy:
                 type: string
                 pattern: \d+\.\d{2}
                 example: '10362941097.49'
-                description: Wartość sprzedanych towarów i materiałów" - wariant porównawczy
-                  poz. B (VIII) - kwota na dzień kończący poprzedni rok obrotowy
+                description: Wartość sprzedanych towarów i materiałów" - kwota na
+                  dzień kończący poprzedni rok obrotowy
               pala_oac_vogams_cpfy:
                 type: string
                 pattern: \d+\.\d{2}
                 example: '10362941097.49'
-                description: Wartość sprzedanych towarów i materiałów" - wariant porównawczy
-                  poz. B (VIII) - przekształcone dane porównawcze za poprzedni rok
-                  obrotowy
+                description: Wartość sprzedanych towarów i materiałów" - przekształcone
+                  dane porównawcze za poprzedni rok obrotowy
               pala_oac_ocbt_cfy:
                 type: string
                 pattern: \d+\.\d{2}
