feat: add new endpoint allFinancialData and refactor

--- a/reference/krs_rdf/paths/documents-GET.yaml
+++ b/reference/krs_rdf/paths/documents-GET.yaml
@@ -370,7 +370,7 @@ parameters:
   in: query
 tags:
 - documents
-summary: ''
+summary: GET /v1/rdf/documents
 components:
   schemas:
     $ref: ../../common/schemas.yaml
