--- a/reference/krs_rdf/paths/financial-data-id-GET.yaml
+++ b/reference/krs_rdf/paths/financial-data-id-GET.yaml
@@ -23,57 +23,56 @@ responses:
               type: integer
               example: 2520543
               format: int32
+            consolidated:
+              description: Informacja, czy sprawozdanie jest skonsolidowane
+              example: true
+              type: boolean
+            crawling_date:
+              description: Data pobrania sprawozdania z RDF
+              example: '2019-07-24'
+              format: date
+              type: string
+            filing_date:
+              description: Data publikacji sprawozdania w RDF
+              example: '2019-07-19'
+              format: date
+              type: string
+            ias_standard:
+              description: Informacja, czy sprawozdanie zostało sporządzone zgodnie z Międzynarodowymi Standardami Rachunkowości
+              example: false
+              type: boolean
             krs:
               description: Numer KRS podmiotu, którego dotyczy sprawozdanie
+              example: 19193
               maxLength: 10
+              minLength: 10
               pattern: ^\d{10}$
               type: string
-              example: 0000019193
-              minLength: 10
-            period_from:
-              format: date
-              type: string
-              example: '2018-01-01'
-              description: Data początkowa okresu, którego dotyczy sprawozdanie
-            period_to:
-              format: date
-              type: string
-              example: '2019-02-28'
-              description: Data końcowa okresu, którego dotyczy sprawozdanie
             period_end_year:
-              format: int32
-              type: integer
-              example: 2019
               description: Rok z daty końcowej okresu, którego dotyczy dokument
-            period_major_year:
+              example: 2019
               format: int32
               type: integer
-              example: 2018
+            period_from:
+              description: Data początkowa okresu, którego dotyczy sprawozdanie
+              example: '2018-01-01'
+              format: date
+              type: string
+            period_major_year:
               description: Zasadniczy rok, którego dotyczy dokument
+              example: 2018
+              format: int32
+              type: integer
+            period_to:
+              description: Data końcowa okresu, którego dotyczy sprawozdanie
+              example: '2019-02-28'
+              format: date
+              type: string
             preparation_date:
-              format: date
-              type: string
-              example: '2019-04-12'
               description: Data sporządzenia sprawozdania
-            filing_date:
+              example: '2019-04-12'
               format: date
               type: string
-              example: '2019-07-19'
-              description: Data publikacji sprawozdania w RDF
-            crawling_date:
-              format: date
-              type: string
-              example: '2019-07-24'
-              description: Data pobrania sprawozdania z RDF
-            consolidated:
-              type: boolean
-              example: true
-              description: Informacja, czy sprawozdanie jest skonsolidowane
-            ias_standard:
-              type: boolean
-              example: false
-              description: Informacja, czy sprawozdanie zostało sporządzone zgodnie
-                z Międzynarodowymi Standardami Rachunkowości
             bs_a_ca_cfy:
               description: Aktywa obrotowe - kwota na dzień kończący bieżący rok obrotowy
               example: '101506941097.49'
