fix: correct description in errors 403 and 404

--- a/reference/krs_rdf/paths/financial-data-id-GET.yaml
+++ b/reference/krs_rdf/paths/financial-data-id-GET.yaml
@@ -920,6 +920,7 @@ responses:
           properties:
             error:
               type: string
+    description: Nieudana autoryzacja dostępu do API
   '404':
     content:
       application/json:
@@ -935,7 +936,7 @@ responses:
           properties:
             error:
               type: string
-    description: Nieudana autoryzacja dostępu do API
+    description: Nie znaleziono
   '429':
     content:
       application/json:
