--- a/reference/krs_rdf/paths/all-financial-data-id-GET.yaml
+++ b/reference/krs_rdf/paths/all-financial-data-id-GET.yaml
@@ -1329,6 +1329,7 @@ responses:
           properties:
             error:
               type: string
+    description: Nieudana autoryzacja dostępu do API
   '404':
     content:
       application/json:
@@ -1344,7 +1345,7 @@ responses:
           properties:
             error:
               type: string
-    description: Nieudana autoryzacja dostępu do API
+    description: Nie znaleziono
   '429':
     content:
       application/json:
