--- a/reference/krs_rdf/paths/documents-id-GET.yaml
+++ b/reference/krs_rdf/paths/documents-id-GET.yaml
@@ -240,6 +240,7 @@ responses:
           properties:
             error:
               type: string
+    description: Nieudana autoryzacja dostępu do API
   '404':
     content:
       application/json:
@@ -255,7 +256,7 @@ responses:
           properties:
             error:
               type: string
-    description: Nieudana autoryzacja dostępu do API
+    description: Nie znaleziono
   '429':
     content:
       application/json:
