feat: description for fields in meta

--- a/reference/krs_rdf/paths/financial-data-GET.yaml
+++ b/reference/krs_rdf/paths/financial-data-GET.yaml
@@ -40,7 +40,8 @@ responses:
                 format: date
                 type: string
               ias_standard:
-                description: Informacja, czy sprawozdanie zostało sporządzone zgodnie z Międzynarodowymi Standardami Rachunkowości
+                description: Informacja, czy sprawozdanie zostało sporządzone zgodnie
+                  z Międzynarodowymi Standardami Rachunkowości
                 example: false
                 type: boolean
               krs:
