--- a/reference/krs_rdf/paths/financial-data-id-GET.yaml
+++ b/reference/krs_rdf/paths/financial-data-id-GET.yaml
@@ -38,7 +38,8 @@ responses:
               format: date
               type: string
             ias_standard:
-              description: Informacja, czy sprawozdanie zostało sporządzone zgodnie z Międzynarodowymi Standardami Rachunkowości
+              description: Informacja, czy sprawozdanie zostało sporządzone zgodnie
+                z Międzynarodowymi Standardami Rachunkowości
               example: false
               type: boolean
             krs:
