--- a/reference/ins_api/paths/download-report-by-id-v2-reports-report-id-download-GET.yaml
+++ b/reference/ins_api/paths/download-report-by-id-v2-reports-report-id-download-GET.yaml
@@ -102,6 +102,16 @@ responses:
             details: Report not found
           items:
             $ref: '#/components/schemas/Error'
+  '410':
+    description: Gone
+    content:
+      application/json:
+        schema:
+          example:
+            error: Gone
+            details: Report no longer exists
+          items:
+            $ref: '#/components/schemas/Error'
 description: |-
   Pobiera plik wygenerowanego raportu o podanym `id`.
 
