--- a/reference/ins_api/paths/report-by-id-v2-reports-report-id-GET.yaml
+++ b/reference/ins_api/paths/report-by-id-v2-reports-report-id-GET.yaml
@@ -97,6 +97,16 @@ responses:
             details: Report not found
           items:
             $ref: '#/components/schemas/Error'
+  '410':
+    description: Gone
+    content:
+      application/json:
+        schema:
+          example:
+            error: Gone
+            details: Report no longer exists
+          items:
+            $ref: '#/components/schemas/Error'
 description: Zwraca raport o podanym `id`.
 components:
   schemas:
