feat: add new fields to rdf/params endpoint and fix response type and add slash at the end url [fix]

--- a/reference/common/schemas/params-query.yaml
+++ b/reference/common/schemas/params-query.yaml
@@ -28,4 +28,12 @@ properties:
   limit:
     title: Limit
     type: integer
+  project:
+    title: Project
+    anyOf:
+    - uniqueItems: true
+      type: array
+      items:
+        type: string
+    - type: object
 additionalProperties: false
